--- a/Lab2.DataAccessLayer/Lab2.DataAccessLayer.csproj
+++ b/Lab2.DataAccessLayer/Lab2.DataAccessLayer.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lab2.Entities\Lab2.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
