--- a/Lab2.DataAccessLayer/Lab2.DataAccessLayer.csproj
+++ b/Lab2.DataAccessLayer/Lab2.DataAccessLayer.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\Lab2.Entities\Lab2.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
