--- a/Lab2.TaskManagerWebApp/Lab2.TaskManagerWebApp.csproj
+++ b/Lab2.TaskManagerWebApp/Lab2.TaskManagerWebApp.csproj
@@ -9,15 +9,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Lab2.DataAccessLayer\Lab2.DataAccessLayer.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Task\" />
   </ItemGroup>
 
 </Project>
